[workspace]
resolver = "2"
members = ["blssig", "certs", "gpbft", "lightclient", "merkle", "rpc"]

[workspace.package]
authors = ["ChainSafe Systems <forest@chainsafe.io>"]
repository = "https://github.com/ChainSafe/rust-f3"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
fvm_ipld_encoding = "0.5"
keccak-hash = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
serde_json = { version = "1", features = ["raw_value"] }
jsonrpsee = { version = "0.24", features = ["ws-client", "http-client"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
num = "0.4"
bls-signatures = { version = "0.15"}
bls12_381 = "0.8"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde_cbor = "0.11.2"
num-traits = "0.2.19"
base32 = "0.5.1"
cid = { version = "0.10.1", features = ["std"] }
fvm_ipld_bitfield = "0.7.1"
strum_macros = "0.26"
base64 = "0.22"
sha3 = "0.10.8"