[package]
name = "filecoin-f3-certs"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { workspace = true }
filecoin-f3-gpbft = { path = "../gpbft" }
keccak-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
filecoin-f3-gpbft = { path = "../gpbft", features = ["test-utils"] }
