[package]
name = "filecoin-f3-gpbft"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
base32 = "0.5"
cid = { version = "0.11", features = ["std"] }
fvm_ipld_bitfield = "0.7"
fvm_ipld_encoding = { workspace = true }
keccak-hash = { workspace = true }
multihash-codetable = { version = "0.1" }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = "1"
strum_macros = "0.27"
thiserror = { workspace = true }

[dev-dependencies]
filecoin-f3-gpbft = { features = ["test-utils"], path = "../gpbft" }

[target.'cfg(target_family="wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
test-utils = []
