[package]
name = "filecoin-f3-gpbft"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
base32 = { workspace = true }
cid = { workspace = true }
filecoin-f3-merkle = { path = "../merkle" }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_encoding = { workspace = true }
keccak-hash = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_family="wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
test-utils = []
