[package]
name = "filecoin-f3-lightclient"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
filecoin-f3-rpc = { path = "../rpc" }
filecoin-f3-certs = { path = "../certs" }
filecoin-f3-gpbft = { path = "../gpbft" }
filecoin-f3-blssig = { path = "../blssig" }

tokio.workspace = true
anyhow.workspace = true
base64 = { workspace = true }
keccak-hash.workspace = true
serde_json.workspace = true
serde.workspace = true
num-bigint = { workspace = true }
num.workspace = true