[package]
name = "filecoin-f3-merkle"
version = "0.1.0"
description = "Merkle tree implementation matching go-f3's merkle package"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
