[package]
name = "filecoin-f3-rpc"
version = "0.1.0"
description = "Simple HTTP JSON-RPC client for interacting with F3 endpoints, supporting certificate and power table retrieval"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
filecoin-f3-gpbft = { path = "../gpbft", version = "0.1.0" }

anyhow.workspace = true
jsonrpsee.workspace = true
num-bigint = { workspace = true }
serde.workspace = true

[dev-dependencies]
